# test-25594-toml-v1

./: .tool-versions  README.md  pyproject.toml
.github/workflows/: reproduce.yml
